--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <nav>
     <a href="#">Home</a>
     <a href="#">Notícias</a>
-    <a href="#">Curiosidades</a>
-    <a href="#">Fale Conosco</a>
+        <a href="#">Contato</a>
 </nav>
 <main>
     <article>
@@ -137,7 +136,7 @@
 </main>
 <footer>
          
-<p>Site criado por <a href="https://github.com/gustavoguanabara/html-css" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/cursoemvideo">CursoemVideo</a>.</p>
+<p>Site criado por <a href=https://github.com/waldeck-silva15 target="_blank"> Waldeck Silva</a> para o <a href="https://www.youtube.com/cursoemvideo">CursoemVideo</a>.</p>
 </footer>
 </body>
 </html>
